Fix trusted authentication result